TEST_PROGRAMS/VALID/mathieu_boucher/valid3.min
# Compute 2.0^x
var x: int;
var y: float;

x = 10;
y = 1.0;

while x do
y = y * 2.0;
x = x - 1;
done

print y;
