TEST_PROGRAMS/INVALID/yanis_hattab/invalid3.min
var x : int;
var y : float;

while x 

   y = y * 2.0;

   x = x - 1;

done
